@startuml

title __MODEL's Class Diagram__\n

  namespace ub.edu.model {
    class ub.edu.model.CarteraSocis {
        - llista : List<Soci>
        + CarteraSocis()
        + find()
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Especie {
        - nom : String
        + Especie()
        + getNom()
        + setNom()
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Excursio {
        - data : LocalDate
        - llistaEspecies : Set<Especie>
        - nom : String
        + Excursio()
        + Excursio()
        + addEspecie()
        + containsEspecie()
        + getData()
        + getNom()
        + setData()
        + setNom()
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Soci {
        - nom : String
        - pwd : String
        + Soci()
        + getName()
        + getPwd()
        + setName()
        + setPwd()
    }
  }
  
namespace ub.edu.model {
CarteraSocis "1" --> "*" Soci: conté
Excursio "*" -->"*" Especie: explora
}


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
